--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,8 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="colorBronze">#CD7F32</color>
+    <color name="colorSilver">#C0C0C0</color>
+    <color name="colorGold">#FFD700</color>
+
 </resources>
