--- a/app/src/main/res/layout/activity_quiz2.xml
+++ b/app/src/main/res/layout/activity_quiz2.xml
@@ -1,7 +1,77 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    tools:context=".QuizActivity">
+    <TextView
+        android:id="@+id/numQ"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:gravity="center"
+        android:text="Вопрос 1"
+        android:textSize="40sp" />
+    <TextView
+        android:id="@+id/question"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
+        android:gravity="center"
+        android:text="Question"
+        android:textSize="20sp"
+        android:layout_below="@+id/numQ"/>
+    <CheckBox
+        android:id="@+id/ansbtn1"
+        android:onClick="selectItem"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/ansbtn2"
+        android:layout_centerHorizontal="true"/>
+    <CheckBox
+        android:id="@+id/ansbtn2"
+        android:onClick="selectItem"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/ansbtn3"
+        android:layout_centerHorizontal="true"/>
+    <CheckBox
+        android:id="@+id/ansbtn3"
+        android:onClick="selectItem"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/ansbtn4"
+        android:layout_centerHorizontal="true"/>
+    <CheckBox
+        android:id="@+id/ansbtn4"
+        android:onClick="selectItem"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/ansbtn5"
+        android:layout_centerHorizontal="true"/>
+    <CheckBox
+        android:id="@+id/ansbtn5"
+        android:onClick="selectItem"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/ansbtn6"
+        android:layout_centerHorizontal="true"/>
+    <CheckBox
+        android:id="@+id/ansbtn6"
+        android:onClick="selectItem"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/submitBtn"
+        android:layout_centerHorizontal="true"/>
+    <Button
+        android:id="@+id/submitBtn"
+        android:layout_width="350dp"
+        android:layout_height="50dp"
+        android:gravity="center"
+        android:text="Ответить"
+        android:onClick="checkAnswerSilver"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"/>
 
 </RelativeLayout>
