--- a/app/src/main/res/layout/activity_quiz3.xml
+++ b/app/src/main/res/layout/activity_quiz3.xml
@@ -28,7 +28,7 @@
         android:id="@+id/answer"
         android:layout_width="250dp"
         android:layout_height="50dp"
-        android:hint="Your answer is?"
+        android:hint="Ваш ответ"
         android:gravity="center"
         android:layout_below="@+id/question"
         android:layout_marginTop="50dp"
