--- a/app/src/main/res/drawable/circle_shape.xml
+++ b/app/src/main/res/drawable/circle_shape.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
+<shape
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="ring"
     android:innerRadiusRatio="2.5"
     android:thickness="5dp"
-    android:useLevel="true">
+    android:useLevel="false">
 
-    <solid android:color="#00FF00" />
+    <solid android:color="#CCC" />
 
 </shape>
