--- a/app/src/main/res/layout/activity_quiz1.xml
+++ b/app/src/main/res/layout/activity_quiz1.xml
@@ -35,6 +35,7 @@
         android:layout_height="60dp"
         android:layout_marginTop="80dp"
         android:text="Answer1"
+        android:layout_marginHorizontal="10dp"
         android:onClick="checkAnswerBronze"
         android:layout_above="@+id/ansbtn2"/>
 
@@ -46,6 +47,7 @@
         android:layout_height="60dp"
         android:layout_marginTop="5dp"
         android:text="Answer2"
+        android:layout_marginHorizontal="10dp"
         android:onClick="checkAnswerBronze"
         android:layout_above="@+id/ansbtn3"/>
 
@@ -57,6 +59,7 @@
         android:layout_height="60dp"
         android:layout_marginTop="5dp"
         android:text="Answer3"
+        android:layout_marginHorizontal="10dp"
         android:onClick="checkAnswerBronze"
         android:layout_above="@+id/ansbtn4"/>
 
@@ -68,8 +71,10 @@
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"
         android:gravity="center"
         android:text="Answer4"
+        android:layout_marginHorizontal="10dp"
         android:onClick="checkAnswerBronze"
         android:layout_alignParentBottom="true"/>
 </RelativeLayout>
